[package]
name = "phdrs"
version = "0.1.0"
authors = ["Edd Barrett <vext01@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[dependencies]
libc = { version = "0.2.94", default-features = false }
core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = "0.1.16", optional = true }

[features]
default = ["std"]
rustc-dep-of-std = ['core', 'compiler_builtins']
std = []
alloc = []
